updated swagger interface for delete user home directory
- returned 404 if user or user's home not found
- returned 403 if user home directory not empty
